# profanityx

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml  validate-wordlist.yml
profanityx/: __init__.py  detector.py  normalizer.py
profanityx/wordlists/: en.json  ru.json  uz.json
scripts/: validate_wordlists.py
tests/: conftest.py  test_detector.py  test_lang_en.py  test_lang_ru.py  test_lang_uz.py  test_normalizer.py  test_performance.py  test_wordlist_validator.py  test_wordlists.py
